introprog-wise1718/.svn/pristine/53/53c5693e689ed0c6b43afc93fd1291a62cf6f7ef.svn-base
case_drei.c: In function 'main':
case_drei.c:4:5: error: expected declaration specifiers before 'printf'
     printf("Hallo Welt!\n");
     ^
case_drei.c:5:5: error: expected declaration specifiers before 'return'
     return 0;
     ^
case_drei.c:6:1: error: expected declaration specifiers before '}' token
 }
 ^
case_drei.c:6:1: error: expected '{' at end of input
